--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>My pookie is Anđelo!</h1>
+    <p>I love him!</p>
+    <p>You may wonder why but he was the realest friend to me!</p>
+    <h2>He is a heteroflexible furry femboy! And maybe more that than.</h2>
 </body>
 </html>
